--- a/target-eclipse/classes/.gitignore
+++ b/target-eclipse/classes/.gitignore
@@ -1,46 +1,6 @@
-/_testemails/
 /com/
-/configuration.properties
-/dbdoc/
-/delivery/
-/dozerBeanMappings.xml
 /grails/
-/hibernate/
-/images.properties
-/index.gsp
-/layouts/
-/map.html
-/messages.properties
-/messages_de.properties
-/messages_es.properties
-/messages_fr.properties
-/messages_it.properties
-/messages_ja.properties
 /org/
-/DefaultCacheConfig$_run_closure1.class
-/DefaultCacheConfig$_run_closure1_closure2.class
-/DefaultCacheConfig$_run_closure1_closure3.class
-/DefaultCacheConfig.class
-/twitter/
-/ApplicationResources$_run_closure1.class
-/ApplicationResources$_run_closure1_closure2.class
-/ApplicationResources.class
-/BootStrap$_closure1.class
-/BootStrap$_closure2.class
-/BootStrap.class
-/BuildConfig$_run_closure1.class
-/BuildConfig$_run_closure1_closure2.class
-/BuildConfig$_run_closure1_closure3.class
-/BuildConfig$_run_closure1_closure4.class
-/BuildConfig$_run_closure1_closure5.class
-/BuildConfig.class
-/Config$_run_closure1.class
-/Config$_run_closure1_closure4.class
-/Config$_run_closure2.class
-/Config$_run_closure2_closure5.class
-/Config$_run_closure2_closure6.class
-/Config$_run_closure3.class
-/Config.class
 /DataSource$_run_closure1.class
 /DataSource$_run_closure2.class
 /DataSource$_run_closure3.class
@@ -55,9 +15,69 @@
 /DataSource.class
 /DbdocUrlMappings$__clinit__closure1.class
 /DbdocUrlMappings.class
+/DefaultCacheConfig$_run_closure1.class
+/DefaultCacheConfig$_run_closure1_closure2.class
+/DefaultCacheConfig$_run_closure1_closure3.class
+/DefaultCacheConfig.class
 /DefaultRoute$_closure1.class
 /DefaultRoute.class
+/Integration.class
+/ScaffoldingResources$_run_closure1.class
+/ScaffoldingResources$_run_closure1_closure2.class
+/ScaffoldingResources.class
+/UrlMappings$__clinit__closure1.class
+/UrlMappings$__clinit__closure1_closure2.class
+/UrlMappings$__clinit__closure1_closure2_closure3.class
+/UrlMappings.class
+/Utility.class
+/delivery/
+/resources$_run_closure1.class
+/resources.class
+/twitter/
+/ApplicationResources$_run_closure1.class
+/ApplicationResources$_run_closure1_closure2.class
+/ApplicationResources.class
+/BootStrap$_closure1.class
+/BootStrap$_closure2.class
+/BootStrap.class
+/BootstrapResources$_run_closure1.class
+/BootstrapResources$_run_closure1_closure10.class
+/BootstrapResources$_run_closure1_closure11.class
+/BootstrapResources$_run_closure1_closure12.class
+/BootstrapResources$_run_closure1_closure13.class
+/BootstrapResources$_run_closure1_closure14.class
+/BootstrapResources$_run_closure1_closure15.class
+/BootstrapResources$_run_closure1_closure16.class
+/BootstrapResources$_run_closure1_closure17.class
+/BootstrapResources$_run_closure1_closure18.class
+/BootstrapResources$_run_closure1_closure19.class
+/BootstrapResources$_run_closure1_closure2.class
+/BootstrapResources$_run_closure1_closure20.class
+/BootstrapResources$_run_closure1_closure3.class
+/BootstrapResources$_run_closure1_closure4.class
+/BootstrapResources$_run_closure1_closure5.class
+/BootstrapResources$_run_closure1_closure6.class
+/BootstrapResources$_run_closure1_closure7.class
+/BootstrapResources$_run_closure1_closure8.class
+/BootstrapResources$_run_closure1_closure9.class
+/BootstrapResources.class
+/BuildConfig$_run_closure1.class
+/BuildConfig$_run_closure1_closure2.class
+/BuildConfig$_run_closure1_closure3.class
+/BuildConfig$_run_closure1_closure4.class
+/BuildConfig$_run_closure1_closure5.class
+/BuildConfig.class
+/Config$_run_closure1.class
+/Config$_run_closure1_closure4.class
+/Config$_run_closure2.class
+/Config$_run_closure2_closure5.class
+/Config$_run_closure2_closure6.class
+/Config$_run_closure3.class
+/Config.class
 /DefaultSecurityConfig$_run_closure1.class
+/DefaultSecurityConfig.class
+/DefaultWebXmlConfig$_run_closure1.class
+/DefaultWebXmlConfig.class
 /JQueryConfig$_run_closure1.class
 /JQueryConfig.class
 /JQueryPluginResources$_run_closure1.class
@@ -84,42 +104,6 @@
 /JQueryTagLib$_closure4.class
 /JQueryTagLib$_closure5.class
 /JQueryTagLib.class
-/ResourcesBootStrap$_closure1.class
-/ResourcesBootStrap$_closure2.class
-/ResourcesBootStrap.class
-/ScaffoldingResources$_run_closure1.class
-/ScaffoldingResources$_run_closure1_closure2.class
-/ScaffoldingResources.class
-/UrlMappings$__clinit__closure1.class
-/UrlMappings$__clinit__closure1_closure2.class
-/UrlMappings$__clinit__closure1_closure2_closure3.class
-/UrlMappings.class
-/resources$_run_closure1.class
-/resources.class
-/BootstrapResources$_run_closure1.class
-/BootstrapResources$_run_closure1_closure10.class
-/BootstrapResources$_run_closure1_closure11.class
-/BootstrapResources$_run_closure1_closure12.class
-/BootstrapResources$_run_closure1_closure13.class
-/BootstrapResources$_run_closure1_closure14.class
-/BootstrapResources$_run_closure1_closure15.class
-/BootstrapResources$_run_closure1_closure16.class
-/BootstrapResources$_run_closure1_closure17.class
-/BootstrapResources$_run_closure1_closure18.class
-/BootstrapResources$_run_closure1_closure19.class
-/BootstrapResources$_run_closure1_closure2.class
-/BootstrapResources$_run_closure1_closure20.class
-/BootstrapResources$_run_closure1_closure3.class
-/BootstrapResources$_run_closure1_closure4.class
-/BootstrapResources$_run_closure1_closure5.class
-/BootstrapResources$_run_closure1_closure6.class
-/BootstrapResources$_run_closure1_closure7.class
-/BootstrapResources$_run_closure1_closure8.class
-/BootstrapResources$_run_closure1_closure9.class
-/BootstrapResources.class
-/DefaultSecurityConfig.class
-/DefaultWebXmlConfig$_run_closure1.class
-/DefaultWebXmlConfig.class
 /LoginController$_closure1.class
 /LoginController$_closure2.class
 /LoginController$_closure3.class
@@ -131,3 +115,6 @@
 /LoginController.class
 /LogoutController$_closure1.class
 /LogoutController.class
+/ResourcesBootStrap$_closure1.class
+/ResourcesBootStrap$_closure2.class
+/ResourcesBootStrap.class
