verify changes and clean

--- a/src/java/configuration.properties
+++ b/src/java/configuration.properties
@@ -1,1 +1,4 @@
+baseUrl=http://deliveryaltoque.cloudapp.net:8080/deliveryAlToqueV2
 token.expiration.time=60
+
+url.shortener.key=AIzaSyCEya6UxJCCFi-JD7I5pZMhLsuWDmWYK5g
